applications/rabbitmq/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rabbitmq-system
  labels:
    shared-gateway-access: "true"
