applications/rabbitmq/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mqtt-tcp-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - name: mqcluster
          port: 1883
